# turtlebot4-scaled-vehicles-2025

./: .gitignore  README.md
3D-Models/: cameraHolder.stl
Documentation/: Further-Reading.md
Documentation/Hermes/: camera_configuration.md  depth_intensity_image_syncer.md  hermes.md  hermes_core.md  hermes_documentation.md  image_comparisons.md  launch_files.md
Documentation/Installation/: Network-Discovery-Server.md
Documentation/On-Board-Computers/Raspberry-Pi/: Flash-SD-card.md  General.md  Overview.md
Documentation/Raspberry-Pi/: SD-card.md
Documentation/SLAM/: Slam.md
Documentation/Software/: RViz.md
Documentation/TurtleBot4/: Overview.md  Shortcuts.md  Specifications.md  Tips&Tricks.md
Documentation/TurtleBot4/Config-Files/: Config-Files.md
Documentation/TurtleBot4/On-Board-Computers/Create3/: Overview.md
Documentation/TurtleBot4/On-Board-Computers/Raspberry-Pi/: Flash-SD-card.md  Overview.md
Documentation/TurtleBot4/Sensors/: Camera-OAK-D.md  Inertial Measurement-IMU.md
Documentation/TurtleBot4/Setup/: Base-Setup.md  Network-Discovery-Server.md  Remote-Server.md
Documentation/TurtleBot4/Software/NAV2/: Plugins.md
Documentation/TurtleBot4/Software/Programming/: Road-Navigation.md
Documentation/TurtleBot4/Software/RViz/: RViz.md
Documentation/TurtleBot4/Troubleshooting/Sensors/: Troubleshooting.md
Results/Turtlebot/: Turtlebot.md
Software/GulliView/gv_client/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
Software/GulliView/gv_client/gv_client/: gullivutil.py  gv_client_2025.py  gv_socket_logger.py  gv_socket_server.py  laptop_socket_server.py
Software/GulliView/gv_client/gv_client_node/: gv_socket_logger.py  gv_socket_server.py  laptop_socket_server.py
Software/GulliView/gv_client/launch/: gv_client.launch.py
Software/GulliView/gv_client/msg/: GulliViewPosition.msg
Software/GulliView/gv_interfaces/: CMakeLists.txt  package.xml
Software/GulliView/gv_interfaces/msg/: LaptopSpeed.msg
Software/Navigation/: Pointcloud.md
Software/Testing/: make_graphs.py
Software/Testing/Image-Compare/: image_comparison.py  test_gui.py
Software/Testing/Image-Compare/algorithms/: mean_square_error.py  normalized_cross_correlation.py  ssim.py
Software/Testing/Image-Compare/output/: resultat_full_lab_45_35_20.csv  resultat_full_lab_9_Maj_45_35_20.csv  resultat_full_lab_NEW_10_Maj_45_35_20.csv  resultat_full_lab_g_t_45_35_20.csv  resultat_full_lab_no_roads_10_Maj_45_35_20.csv  resultat_full_lab_no_roads_45_35_20.csv  results_gui.csv  results_not_gui.csv  testing_45_35_20.csv  testing_equal_weights.csv  testing_mse_50.csv  testing_ncc_50.csv  testing_ssim_50.csv
Software/Testing/eval_tests/: package.xml  setup.cfg  setup.py
Software/Testing/eval_tests/eval_tests/: bag_magic.py  distance.py  go_to_pose.py  pose_analyzer.py  pose_controller.py  pose_recorder.py  trajectories.py
Software/TurtleBot4/hermes/: package.xml  setup.cfg  setup.py
Software/TurtleBot4/hermes/config/: ekf.yaml  nav2.yaml  pc.yaml  slam.yaml
Software/TurtleBot4/hermes/hermes/: depth_intensity_image_syncer.py  hermes_core.py  hermes_core4.0.py  lawnmower.py
Software/TurtleBot4/hermes/launch/: depthCam.launch.py  ekf.launch.py  nav2.launch.py  start_hermes.launch.py
Software/TurtleBot4/road_nav/: pointcloud_flattner.py
Software/TurtleBot4/road_navigate/: package.xml  setup.cfg  setup.py
Software/TurtleBot4/road_navigate_cpp/: CMakeLists.txt  lane_costmap.xml  package.xml
Software/TurtleBot4/road_navigate_cpp/include/road_navigate_cpp/: lane_costmap.hpp
Software/TurtleBot4/road_navigate_cpp/src/: gradient_layer copy.cpp  lane_costmap.cpp
(+16 files in other folders)
