<?xml version="1.0"?>
<package format="3">
  <name>gv_client</name>
  <version>0.0.0</version>
  <description>GulliView client and logger</description>
  <maintainer email="your@email.com">YOUR_NAME</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>gv_interfaces</depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
